src/styles/_Menu.scss
.menu {
  @include menus(
    './images/blood-smear-png-4.png',
    center,
    cover,
    16px,
    #3a3a3a
  );
  height: 120px;
  width: 400px;
  margin: -120px 20px 0px 0px;
  float: right;
  p {
    font-size: 2.3em;
    color: white;
    margin: 12px 100px 0px 0px;
    font-weight: bold;
  }
  &:hover {
    cursor: pointer;
    filter: drop-shadow(16px 16px 20px $mainColor);
    p {
      text-shadow: #000 7px 0px 3px;
      color: transparent;
    }
  }
}

.full-menu {
  @include menus(
    './images/blood-hd-png-39827.png',
    50% 95%,
    contain,
    -16px,
    #161616
  );
  width: 900px;
  position: absolute;
  height: 800px;
  top: -240px;
  right: -140px;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  animation-name: zoomIn;
  animation-duration: 0.7s;
  .menu-item {
    text-decoration: none;
    margin: 5px;
    @include menuItem(2em);
    padding-bottom: 10px;
  }

  .a-tag {
    margin-bottom: 10px;
  }

  button {
    @include tansparentButton();
    margin: -60px 0px 15px;
    @include menuItem(1.5em);
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
  }

  @keyframes zoomIn {
    0% {
      opacity: 0;
      transform: rotate(0.05turn) scale(0.4) translate(100px, -40%);
    }
  }
}

